fix: do not show validation error summary when there is only one error, and remember collapsed state

--- a/src/components/controls/ValidationErrorsOverview.scss
+++ b/src/components/controls/ValidationErrorsOverview.scss
@@ -35,7 +35,7 @@
 
           button.validation-errors-collapse {
             width: 36px;
-            height: 100%;
+            height: 26px;
             cursor: pointer;
 
             &:hover {
@@ -48,7 +48,7 @@
           display: inline-block;
           position: relative;
           top: 3px;
-          // TODO: position this in a better way
+          // TODO: position this icon in a better way
         }
       }
     }
